--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,12 +8,12 @@
 
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
-                    <br>
-                    Powered by <a href="https://pqqqya.github.io">pqqqYa Blog</a> |
-                    <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px"
-                        height="20px"
-                        src="https://ghbtns.com/github-btn.html?user=pqqqYa&repo=pqqqya.github.io&type=star&count=true">
-                    </iframe>
+<!--                    <br>-->
+<!--                    Powered by <a href="https://pqqqya.github.io">pqqqYa Blog</a> |-->
+<!--                    <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px"-->
+<!--                        height="20px"-->
+<!--                        src="https://ghbtns.com/github-btn.html?user=pqqqYa&repo=pqqqya.github.io&type=star&count=true">-->
+<!--                    </iframe>-->
                 </p>
             </div>
         </div>
