--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -73,7 +73,7 @@
     <a target="_blank" href="https://gitee.com/{{ site.gitee_username }}">
     <span class="fa-stack fa-lg">
       <i class="fa fa-circle fa-stack-2x"></i>
-      <i class="fa-brands fa-stack-1x fa-inverse"></i>
+      <i class="fa fa-brands fa-stack-1x fa-inverse"></i>
     </span>
     </a>
   </li>
