--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -72,8 +72,9 @@
   <li>
     <a target="_blank" href="https://gitee.com/{{ site.gitee_username }}">
     <span class="fa-stack fa-lg">
-      <i class="fa fa-circle fa-stack-2x"></i>
-      <i class="fa fa-g fa-stack-1x fa-inverse"></i>
+<!--      <i class="fa fa-circle fa-stack-2x"></i>-->
+<!--      <i class="fa fa-g fa-stack-1x fa-inverse"></i>-->
+      <i class="fa-brands fa-guilded"></i>  
     </span>
     </a>
   </li>
