--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -74,7 +74,7 @@
     <span class="fa-stack fa-lg">
 <!--      <i class="fa fa-circle fa-stack-2x"></i>-->
 <!--      <i class="fa fa-g fa-stack-1x fa-inverse"></i>-->
-      <i class="fa-brands fa-guilded"></i>  
+      <i class="fa fa-guilded"></i>
     </span>
     </a>
   </li>
